@@ -320,6 +320,29 @@ asciidoc.install();
 </div>
 <div id="content">
 <div class="sect1">
+<h2 id="_v1_0_0">v1.0.0</h2>
+<div class="sectionbody">
+<div class="ulist"><ul>
+<li>
+<p>
+allowed 2.4.0 and 2.4.1 release of taskwarrior.
+</p>
+</li>
+<li>
+<p>
+added keywords in the desktop file.
+</p>
+</li>
+<li>
+<p>
+added a command line option to force usage of an unsupported
+   version of taskwarrior (risk of malfunction like damaging data).
+</p>
+</li>
+</ul></div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="_v0_0_9">v0.0.9</h2>
 <div class="sectionbody">
 <div class="ulist"><ul>
@@ -623,7 +646,7 @@ Initial release.
 <div id="footer">
 <div id="footer-text">
 Last updated
- 2014-11-22 11:33:59 CET
+ 2015-06-24 22:14:21 CEST
 </div>
 </div>
 </body>
