@@ -11,7 +11,7 @@
 # Origin: gettext-0.16
 
 PACKAGE = ptask
-VERSION = 0.0.9
+VERSION = 1.0.0
 PACKAGE_BUGREPORT = jeanfi@gmail.com
 
 SHELL = /bin/sh
@@ -21,7 +21,7 @@ srcdir = .
 top_srcdir = ..
 
 
-prefix = /usr/local
+prefix = /tmp
 exec_prefix = ${prefix}
 datarootdir = ${prefix}/share
 datadir = ${datarootdir}
@@ -34,12 +34,12 @@ INSTALL_DATA = ${INSTALL} -m 644
 # We use $(mkdir_p).
 # In automake <= 1.9.x, $(mkdir_p) is defined either as "mkdir -p --" or as
 # "$(mkinstalldirs)" or as "$(install_sh) -d". For these automake versions,
-# ${SHELL} /home/jporsini/work.local/ptask/install-sh does not start with $(SHELL), so we add it.
+# ${SHELL} /home/jporsini/work/ptask/install-sh does not start with $(SHELL), so we add it.
 # In automake >= 1.10, $(MKDIR_P) is derived from ${MKDIR_P}, which is defined
 # either as "/path/to/mkdir -p" or ".../install-sh -c -d". For these automake
 # versions, $(mkinstalldirs) and $(install_sh) are unused.
-mkinstalldirs = $(SHELL) ${SHELL} /home/jporsini/work.local/ptask/install-sh -d
-install_sh = $(SHELL) ${SHELL} /home/jporsini/work.local/ptask/install-sh
+mkinstalldirs = $(SHELL) ${SHELL} /home/jporsini/work/ptask/install-sh -d
+install_sh = $(SHELL) ${SHELL} /home/jporsini/work/ptask/install-sh
 MKDIR_P = /bin/mkdir -p
 mkdir_p = $(MKDIR_P)
 
