@@ -5,6 +5,8 @@ v1.0.0
 ------
  * allowed 2.4.0 and 2.4.1 release of taskwarrior.
  * added keywords in the desktop file.
+ * added a command line option to force usage of an unsupported
+   version of taskwarrior (risk of malfunction like damaging data).
 
 v0.0.9
 ------
